--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "underscore": "1.8.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "del": "~1.1.1",
     "gulp": "~3.8.11",
     "gulp-angular-templatecache": "~1.5.0",
+    "gulp-babel": "^7.0.1",
     "gulp-concat": "~2.4.3",
     "gulp-debug": "~2.0.0",
     "gulp-if": "~1.2.5",
@@ -41,6 +44,7 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "merge2": "~0.3.1",
     "through2": "~0.6.3",
+    "uglify-js-harmony": "^2.7.7",
     "yargs": "~3.5.4"
   },
   "scripts": {
